# comate

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  LICENSE  README.md  development.md  index.html  package-lock.json  package.json  prototype.html  tailwind.config.js  tsconfig.json  tsconfig.server.json  tsconfig.server.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.browser.config.ts  vitest.config.ts  vitest.jsdom.config.ts  vitest.setup.ts  vitest.workspace.ts
.claude/: settings.json  settings.local.json
.github/workflows/: build-windows.yml  build.yml  ci.yml  deploy-website.yml
LICENSES/: ai-elements-apache-2.0.txt  vercel-skills-MIT.txt
claude-code-plugin/.claude-plugin/: marketplace.json
docs/brainstorms/: 2026-05-15-toolbar-modal-sqlite-requirements.md  2026-05-16-ai-elements-message-rendering-requirements.md  2026-05-16-cli-meta-message-rendering-requirements.md  2026-05-16-prompt-input-and-streaming-input-mode-requirements.md  2026-05-17-approval-and-question-surface-swap-requirements.md  2026-05-17-file-path-autocomplete-requirements.md  2026-05-17-slash-command-discovery-requirements.md  (+114 more)
docs/design/: ui-ux-design.md
scripts/: build-chromium-bundle.ts  build-sidecar.ts  build-steel-bundle.ts  generate-wecom-proactive-skill.ts  generate-wecom-skill.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
website/: astro.config.mjs  package-lock.json  package.json
(+1059 files in other folders)
